# ChocoLightEngine

./: .gitattributes  .gitignore  ENGINE_EVALUATION.md  README.md  ci_linux.txt  ci_log.txt  ci_w4.txt  ci_win.txt
.github/workflows/: build-templates.yml
ChocoLight/: CMakeLists.txt  lua51_exports.txt
ChocoLight/include/: asset_loader.h  audio_capture_wasapi.h  auto_exposure_renderer.h  batch_renderer.h  bloom_renderer.h  ffmpeg_common.h  hdr_renderer.h  lens_dirt_renderer.h  lens_flare_renderer.h  light.h  light_antidebug.h  light_audio_backend.h  light_crypto.h  light_lighting2d.h  light_platform_net.h  light_time.h  lit_batch_renderer.h  motion_blur_renderer.h  platform_window.h  record_mp4.h  render_backend.h  ssao_renderer.h  ssr_renderer.h  streak_renderer.h  taa_renderer.h  video_backend.h
ChocoLight/src/: asset_loader.cpp  audio_capture_wasapi.cpp  auto_exposure_renderer.cpp  batch_renderer.cpp  bloom_renderer.cpp  cc_core.cpp  hdr_renderer.cpp  lens_dirt_renderer.cpp  lens_flare_renderer.cpp  light_animation.cpp  light_antidebug.cpp  light_asset.cpp  light_atomic.cpp  light_audio.cpp  light_audio_backend.cpp  light_audio_effect.cpp  light_audio_group.cpp  light_audio_sound.cpp  light_av.cpp  light_blendmode.cpp  light_camera.cpp  light_clipboard.cpp  light_cpuinfo.cpp  light_crypto.cpp  light_cursor.cpp  light_data.cpp  light_db.cpp  light_debug.cpp  light_dialog.cpp  light_display.cpp  light_ecs.cpp  light_endian.cpp  light_error.cpp  light_event.cpp  light_filesystem.cpp  light_gamepad.cpp  light_gpumem.cpp  light_graphics.cpp  light_graphics_canvas.cpp  light_graphics_font.cpp  (+91 more)
Light-0.2.3/: Light.code-workspace  README.md  lightpack.py  pack.bat
Light-0.2.3/assets/: demo.sublime-project  demo.sublime-workspace  example_network.lua  example_record.lua  example_web.lua
Light-0.2.3/demo_gamepad/: main.lua
Light-0.2.3/demo_guid_system/: main.lua
Light-0.2.3/demo_haptic/: main.lua
Light-0.2.3/demo_hidapi/: main.lua
Light-0.2.3/demo_io_storage/: main.lua
Light-0.2.3/demo_process_messagebox/: main.lua
Light-0.2.3/demo_tray/: main.lua
Light-0.2.3/lua/: main.lua  main1.lua
dev/: gen_test_glb.py
docs/: API_REFERENCE.md  AUDIT_TypeSafety.md  HANDOFF_REMAINING_TASKS.md  Light_TypeSafety.md  PROJECT_SUMMARY.md  SKILLS.md
docs/Phase AL Touch+Sensor 补全/: ALIGNMENT_PhaseAL.md
docs/Phase AM Audio 全新绑定/: ALIGNMENT_PhaseAM.md
docs/Phase AN Audio 回调补完/: ALIGNMENT_PhaseAN.md
docs/Phase AO Box2D Physics 增强/: ACCEPTANCE_PhaseAO.md  ALIGNMENT_PhaseAO.md
docs/Phase AP Physics 进阶/: ACCEPTANCE_PhaseAP.md  ALIGNMENT_PhaseAP.md  CONSENSUS_PhaseAP.md
docs/Phase AQ TextInput IME/: ACCEPTANCE_PhaseAQ.md  ALIGNMENT_PhaseAQ.md  CONSENSUS_PhaseAQ.md
docs/Phase AR SDL3扫尾/: ACCEPTANCE_PhaseAR.md  ALIGNMENT_PhaseAR.md  CONSENSUS_PhaseAR.md
docs/Phase AS 图形进阶/: ACCEPTANCE_PhaseAS_1.md  ACCEPTANCE_PhaseAS_2.md  ACCEPTANCE_PhaseAS_3.md  ACCEPTANCE_PhaseAS_4.md  ACCEPTANCE_PhaseAS_4_x.md  ALIGNMENT_PhaseAS.md  ALIGNMENT_PhaseAS_2.md  ALIGNMENT_PhaseAS_3.md  ALIGNMENT_PhaseAS_4_1.md  ALIGNMENT_PhaseAS_4_x.md  CONSENSUS_PhaseAS_1.md  CONSENSUS_PhaseAS_2.md  CONSENSUS_PhaseAS_3.md  CONSENSUS_PhaseAS_4.md
docs/Phase AT 音频空间化/: ACCEPTANCE_PhaseAT.md  ALIGNMENT_PhaseAT.md  CONSENSUS_PhaseAT.md
docs/Phase AU 3D物理/: ACCEPTANCE_PhaseAU_step2.md  ACCEPTANCE_PhaseAU_step3.md  ACCEPTANCE_PhaseAU_step4.md  ALIGNMENT_PhaseAU.md
docs/Phase AV 骨骼动画/: ACCEPTANCE_PhaseAV.md  ALIGNMENT_PhaseAV.md  CONSENSUS_PhaseAV.md  DESIGN_PhaseAV.md  FINAL_PhaseAV.md  TASK_PhaseAV.md  TODO_PhaseAV.md
docs/Phase AW GPU Skinning/: ACCEPTANCE_PhaseAW.md  ALIGNMENT_PhaseAW.md  CONSENSUS_PhaseAW.md  DESIGN_PhaseAW.md  FINAL_PhaseAW.md  TASK_PhaseAW.md  TODO_PhaseAW.md
docs/Phase AW.x/: ACCEPTANCE_PhaseAWx.md  ALIGNMENT_PhaseAWx.md  CONSENSUS_PhaseAWx.md  DESIGN_PhaseAWx.md  FINAL_PhaseAWx.md  TASK_PhaseAWx.md  TODO_PhaseAWx.md
docs/Phase AX/: ACCEPTANCE_PhaseAX.md  ALIGNMENT_PhaseAX.md  CONSENSUS_PhaseAX.md  DESIGN_PhaseAX.md  (+3 more)
examples/: README.md
lumen-master/: .gitignore  CMakeLists.txt  LICENSE  README.md  README_zh.md
lumen-master/.github/workflows/: build.yml  release.yml  security.yml
lumen-master/doc/: light.1  lightc.1
lumen-master/doc/lua/: contents_zh.html  manual.html  manual_zh.html
lumen-master/etc/: lumen.pc
lumen-master/include/: lauxlib.h  lua.h  luaconf.h  lualib.h  lumen.h
lumen-master/internal/lumen/: api.h  code.h  common.inl  debug.h  do.h  gc.h  lex.h  limits.h  memory.h  object.h  opcodes.h  parser.h  protected_call.h  state.h  string.h  table.h  tm.h  undump.h  vm.h  zio.h
lumen-master/internal/xxhash/: xxhash.h
lumen-master/lib/: CMakeLists.txt
lumen-master/lib/lua/: CMakeLists.txt  auxiliary.cpp  base.cpp  bit.cpp  debug.cpp  init.cpp  io.cpp  load.cpp  load_platform.c  math.cpp  object.cpp  os.cpp  string.cpp  table.cpp  utf8lib.cpp  version.rc.in
lumen-master/lib/lumen/: CMakeLists.txt  api.cpp  buffer.cpp  code.cpp  debug.cpp  do.cpp  dump.cpp  func.cpp  gc.cpp  i_state.cpp  lex.cpp  lumen.cpp  memory.cpp  object.cpp  opcodes.cpp  parser.cpp  protected_call.cpp  state.cpp  string.cpp  table.cpp  tm.cpp  undump.cpp  vm.cpp  zio.cpp
lumen-master/src/: CMakeLists.txt
lumen-master/src/light/: CMakeLists.txt  embedded_scripts.h  light.cpp  version.rc.in
lumen-master/src/lightc/: CMakeLists.txt  lightc.cpp  print.cpp  version.rc.in
lumen-master/test/: CMakeLists.txt  hello_cxx.cpp  hello_em.cpp  sort.lua  string.lua  userdata.lua  vbench.lua
lumen-master/tools/: lightpack_mobile.py  lua2header.py
samples/: README.md
scripts/: run_probe_smoke.ps1  run_probe_smoke.sh  verify_magic_coverage.py
templates/android-sdl3/app/src/main/cpp/: CMakeLists.txt  main.cpp
templates/android/app/src/main/cpp/: CMakeLists.txt  light_jni.cpp
templates/ios/: CMakeLists.txt  main.m
templates/ios-sdl3/: CMakeLists.txt  Info.plist  LaunchScreen.storyboard  main.m
templates/ios-sdl3/assets/: main.lua
templates/ios/assets/: main.lua
templates/legacy/ios/: CMakeLists.txt  Info.plist  main.m
tools/: gen_api_doc.py  gen_api_docs.py
(+714 files in other folders)
